+ayan-ool sam, tags

--- a/index.html
+++ b/index.html
@@ -79,6 +79,38 @@
       <div class="col-12 col-lg-6">
         <h2 class="page-header mt-5">НОВЫЕ МАТЕРИАЛЫ</h2>
 
+        <!-- <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
+              <img src="images\aldyn-oolovich-lesson.jpg" alt="Участник конкурса хөөмей">
+            </div>
+            <div class="col-7">
+              <h2>Урок хөөмей</h2>
+              <p class="date">17.08.2020</p>
+            </div>
+          </div>
+          <p class="mt-3">Методика преподавания тувинского горлового пения - ведёт Народный хөөмейжи Республики Тыва Монгуш Андрей Алдын-олович
+          </p>
+          <a class="btn btn-outline-info" href="saradak\saradak.html#add-2" type="button" name="button">Больше</a>
+        </section> -->
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
+              <img src="images\sam-ayan-ool-lesson.jpg" alt="">
+            </div>
+            <div class="col-7">
+              <h2>Мастер-класс по технике горлового пения - Сам Аян-оол Сергеевич</h2>
+              <p class="date">15.08.2020</p>
+            </div>
+          </div>
+          <p class="article-preview mt-3">Дорогие участники!
+             Конкурс - это всегда испытание, это не просто борьба и не просто состязание талантов, самое важное здесь - это возможность открыть новые грани своего Я, дать своему творческому гению шанс на прорыв. Межрегиональный дистанционный детский конкурс исполнителей тувинского горлового пения хөөмей «Мараленок» в рамках Международного детского фестиваля исполнителей горлового пения, проводимый при поддержке Общероссийской общественно-государственной организации «Российский фонд культуры», дает юным исполнителям горлового пения хөөмей возможность не только проявить свои таланты и навыки, но и услышать одаренных сверстников, получить ценные советы от мастеров-исполнителей, обрести новые знания, получить возможность повышения исполнительского мастерства посредством уроков и мастер-классов от именитых хөөмейжи Республики Тыва. Мы благодарим каждого, кто отправил свою заявку на участие и верим, что каждого из вас в будущем ждет успех!
+             Сегодня кипит и идет полным ходом непростая работа жюри, в состав которого входят заслуженные работки культуры и искусства, ученые, искусствоведы, известные исполнители тувинского горлового пения. Тем временем Международный детский фестиваль исполнителей горлового пения продолжается, и мы представляем вашему вниманию видео-мастер-класс по технике исполнения тувинского горлового пения от Народного хоомейжи Республики Тыва, артиста всемирно известного фольклорного ансамбля «Алаш» Сама Аян-оола Сергеевича.
+          </p>
+          <a class="btn btn-outline-info" href="saradak\saradak.html#add-1" type="button" name="button">Больше</a>
+        </section>
+
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
@@ -96,20 +128,6 @@
           <a class="btn btn-outline-info" href="articles\maralyonok-close.html" type="button" name="button">Больше</a>
         </section>
 
-        <section class="article border p-5 m-5">
-          <div class="row article-header align-items-center">
-            <div class="col-5">
-              <img src="images\aldyn-oolovich-lesson.jpg" alt="Участник конкурса хөөмей">
-            </div>
-            <div class="col-7">
-              <h2>Урок хөөмей</h2>
-              <p class="date">12.08.2020</p>
-            </div>
-          </div>
-          <p class="mt-3">Урок хөөмей - ведёт Народный хөөмейжи Республики Тыва Монгуш Андрей Алдын-олович
-          </p>
-          <a class="btn btn-outline-info" href="saradak\saradak.html#add-1" type="button" name="button">Больше</a>
-        </section>
 
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
