--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -141,8 +141,9 @@
               <h3 style="font-size: 2rem;">ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ</h3>
               <div class="add-list">
                 <ul>
-                  <a href="#add-1"><li class="participant">Методика обучения горловому пению - Андрей Алдын-оолович</li></a>
-                  <li class="participant">Мастер-класс по горловому пению - Аян-оол Сам</li>
+                  <a href="#add-1"><li class="participant">Мастер-класс по горловому пению - Аян-оол Сам</li></a>
+                  <a href="#add-2"><li class="participant">Методика обучения горловому пению - Андрей Алдын-оолович</li></a>
+                  <a href="https://vk.com/tuvacenter?w=wall-64833533_8632"><li class="participant">Соств жюри</li></a>
                 </ul>
               </div>
             </div>
@@ -157,14 +158,56 @@
         </div>
      </div>
 
-      <!-- additional materials -->
-     <div class="container-fluid news-preview py-3">
+     <!-- additional materials -->
+
+     <!-- <div class="container-fluid news-preview py-3 id="add-2"">
        <div class="row justify-content-center">
-         <section class="article col-lg-7 col-md-12 border p-5 mt-5" id="add-1">
-               <h2 style="background: #5f9c97; margin-bottom: 0.5em;">Урок хөөмей - ведёт Народный хөөмейжи Республики Тыва Монгуш Андрей Алдын-олович</h2>
-             <div class="video-container">
-               <iframe src="https://www.youtube.com/embed/faR8aJlVsOg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-             </div>
+         <section class="article col-lg-8 col-md-12 border p-5 mt-5">
+               <h2 style="background: #5f9c97; margin-bottom: 0.5em; text-align: center;">Урок хөөмей -<br>ведёт Монгуш Андрей Алдын-олович</h2>
+               <div class="row justify-content-between" style="padding: 0 10px; height: 40vh;">
+                 <p class="col-5" style="height: 35vh; overflow-y: scroll;">Видео-урок «Методика преподавания тувинского горлового пения», проводимая в рамках Международного детского фестиваля исполнителей горлового пения «Мараленок», разработана с учетом требований Федерального государственного образовательного стандарта и предназначена для преподавателей детских школ искусств, преподавателей педагогических вузов и студентов.
+                    В видео-уроке от Народного хөөмейжи Республики Тыва, Заслуженного артиста Республики Тыва, художественного руководителя Тувинского национального оркестра Республики Тыва Монгуша Андрея Алдын-ооловича содержится информация о специфике преподавательской деятельности в школах искусств, подготовке учителей класса «хоомей» и непосредственно о методах преподавания тувинского горлового пения.
+                    <a class="tagline" href="https://vk.com/search?c%5Bq%5D=%23%D0%A2%D1%8B%D0%B2%D0%B0&c%5Bsection%5D=statuses">#Тыва</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D0%BC%D0%B0%D1%80%D0%B0%D0%BB%D0%B5%D0%BD%D0%BE%D0%BA&c%5Bsection%5D=statuses">#мараленок</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%81%D0%B0%D1%80%D0%B0%D0%B4%D0%B0%D0%BA&c%5Bsection%5D=statuses">#сарадак</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9%D1%84%D0%BE%D0%BD%D0%B4%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D1%83%D1%80%D1%8B&c%5Bsection%5D=statuses">#российскийфондкультуры</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%82%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%BE%D0%B5%D0%B3%D0%BE%D1%80%D0%BB%D0%BE%D0%B2%D0%BE%D0%B5%D0%BF%D0%B5%D0%BD%D0%B8%D0%B5&c%5Bsection%5D=statuses">#тувинскоегорловоепение</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%82%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%BE%D0%B5_%D0%B3%D0%BE%D1%80%D0%BB%D0%BE%D0%B2%D0%BE%D0%B5_%D0%BF%D0%B5%D0%BD%D0%B8%D0%B5&c%5Bsection%5D=statuses">#тувинское_горловое_пение</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%85%D0%BE%D0%BE%D0%BC%D0%B5%D0%B9&c%5Bsection%5D=statuses">#хоомей</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%85%D3%A9%D3%A9%D0%BC%D0%B5%D0%B9&c%5Bsection%5D=statuses">#хөөмей</a>
+                  </p>
+                 <div class="col-7">
+                   <iframe src="https://www.youtube.com/embed/faR8aJlVsOg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                 </div>
+               </div>
+             <br>
+           <a class="btn btn-outline-info" href="#top" type="button" name="button">К конкурсу</a>
+           <a class="btn btn-outline-info" href="..\index.html" type="button" name="button">На главную</a>
+           </section>
+         </div>
+      </div> -->
+
+     <div class="container-fluid news-preview py-3" id="add-1">
+       <div class="row justify-content-center">
+         <section class="article col-lg-8 col-md-12 border p-5 mt-5">
+               <h2 style="background: #5f9c97; margin-bottom: 0.5em; text-align: center;">Мастер-класс по технике горлового пения -<br>Сам Аян-оол Сергеевич</h2>
+               <div class="row justify-content-between" style="padding: 0 10px; height: 40vh;">
+                 <p class="col-5" style="height: 35vh; overflow-y: scroll;">Дорогие участники!
+                    Конкурс - это всегда испытание, это не просто борьба и не просто состязание талантов, самое важное здесь - это возможность открыть новые грани своего Я, дать своему творческому гению шанс на прорыв. Межрегиональный дистанционный детский конкурс исполнителей тувинского горлового пения хөөмей «Мараленок» в рамках Международного детского фестиваля исполнителей горлового пения, проводимый при поддержке Общероссийской общественно-государственной организации «Российский фонд культуры», дает юным исполнителям горлового пения хөөмей возможность не только проявить свои таланты и навыки, но и услышать одаренных сверстников, получить ценные советы от мастеров-исполнителей, обрести новые знания, получить возможность повышения исполнительского мастерства посредством уроков и мастер-классов от именитых хөөмейжи Республики Тыва. Мы благодарим каждого, кто отправил свою заявку на участие и верим, что каждого из вас в будущем ждет успех!
+                    Сегодня кипит и идет полным ходом непростая работа жюри, в состав которого входят заслуженные работки культуры и искусства, ученые, искусствоведы, известные исполнители тувинского горлового пения. Тем временем Международный детский фестиваль исполнителей горлового пения продолжается, и мы представляем вашему вниманию видео-мастер-класс по технике исполнения тувинского горлового пения от Народного хоомейжи Республики Тыва, артиста всемирно известного фольклорного ансамбля «Алаш» Сама Аян-оола Сергеевича.
+                    <a class="tagline" href="https://vk.com/search?c%5Bq%5D=%23%D0%A2%D1%8B%D0%B2%D0%B0&c%5Bsection%5D=statuses">#Тыва</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D0%BC%D0%B0%D1%80%D0%B0%D0%BB%D0%B5%D0%BD%D0%BE%D0%BA&c%5Bsection%5D=statuses">#мараленок</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%81%D0%B0%D1%80%D0%B0%D0%B4%D0%B0%D0%BA&c%5Bsection%5D=statuses">#сарадак</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9%D1%84%D0%BE%D0%BD%D0%B4%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D1%83%D1%80%D1%8B&c%5Bsection%5D=statuses">#российскийфондкультуры</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%82%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%BE%D0%B5%D0%B3%D0%BE%D1%80%D0%BB%D0%BE%D0%B2%D0%BE%D0%B5%D0%BF%D0%B5%D0%BD%D0%B8%D0%B5&c%5Bsection%5D=statuses">#тувинскоегорловоепение</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%82%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%BE%D0%B5_%D0%B3%D0%BE%D1%80%D0%BB%D0%BE%D0%B2%D0%BE%D0%B5_%D0%BF%D0%B5%D0%BD%D0%B8%D0%B5&c%5Bsection%5D=statuses">#тувинское_горловое_пение</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%85%D0%BE%D0%BE%D0%BC%D0%B5%D0%B9&c%5Bsection%5D=statuses">#хоомей</a>
+                    <a class="tagline" href="https://vk.com/search?c%5Bper_page%5D=40&c%5Bq%5D=%23%D1%85%D3%A9%D3%A9%D0%BC%D0%B5%D0%B9&c%5Bsection%5D=statuses">#хөөмей</a>
+                  </p>
+                 <div class="col-7">
+                   <iframe src="https://youtube.com/embed/NaB307iykQk" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                 </div>
+               </div>
              <br>
            <a class="btn btn-outline-info" href="#top" type="button" name="button">К конкурсу</a>
            <a class="btn btn-outline-info" href="..\index.html" type="button" name="button">На главную</a>
